RESOLVED FIXED175467
Fix the build with modern Clang's -Wexpansion-to-defined
https://bugs.webkit.org/show_bug.cgi?id=175467
Summary Fix the build with modern Clang's -Wexpansion-to-defined
Tim Horton
Reported 2017-08-10 17:50:09 PDT
Fix the build with modern Clang's -Wexpansion-to-defined
Attachments
Patch (3.16 KB, patch)
2017-08-10 17:50 PDT, Tim Horton
no flags
Archive of layout-test-results from ews103 for mac-elcapitan (1.02 MB, application/zip)
2017-08-10 19:32 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-elcapitan (1.92 MB, application/zip)
2017-08-10 19:58 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (1.93 MB, application/zip)
2017-08-10 20:13 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 (1.53 MB, application/zip)
2017-08-10 22:14 PDT, Build Bot
no flags
Patch (4.16 KB, patch)
2017-08-11 14:29 PDT, Tim Horton
no flags
Patch (4.33 KB, patch)
2017-08-11 14:37 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-08-10 17:50:54 PDT
Build Bot
Comment 2 2017-08-10 18:47:11 PDT Comment hidden (obsolete)
Tim Horton
Comment 3 2017-08-10 18:53:22 PDT
What.
Tim Horton
Comment 4 2017-08-10 18:56:04 PDT
Huh, these are oddly circular! #if ENABLE(FTL_JIT) || ENABLE(WEBASSEMBLY) #define ENABLE_B3_JIT 1 #endif #define ENABLE_WEBASSEMBLY (defined(ENABLE_B3_JIT) && ENABLE_B3_JIT)
Build Bot
Comment 5 2017-08-10 19:32:44 PDT Comment hidden (obsolete)
Build Bot
Comment 6 2017-08-10 19:32:46 PDT Comment hidden (obsolete)
Build Bot
Comment 7 2017-08-10 19:57:59 PDT Comment hidden (obsolete)
Build Bot
Comment 8 2017-08-10 19:58:01 PDT Comment hidden (obsolete)
Build Bot
Comment 9 2017-08-10 20:13:22 PDT Comment hidden (obsolete)
Build Bot
Comment 10 2017-08-10 20:13:24 PDT Comment hidden (obsolete)
Build Bot
Comment 11 2017-08-10 22:14:00 PDT Comment hidden (obsolete)
Build Bot
Comment 12 2017-08-10 22:14:02 PDT Comment hidden (obsolete)
Tim Horton
Comment 13 2017-08-11 14:29:46 PDT
Tim Horton
Comment 14 2017-08-11 14:37:14 PDT
WebKit Commit Bot
Comment 15 2017-08-11 15:35:34 PDT
Comment on attachment 317964 [details] Patch Clearing flags on attachment: 317964 Committed r220615: <http://trac.webkit.org/changeset/220615>
WebKit Commit Bot
Comment 16 2017-08-11 15:35:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.